tests/baselines/reference/jsFileCompilationDuplicateFunctionImplementation.errors.txt
tests/cases/compiler/a.ts(1,10): error TS2393: Duplicate function implementation.


==== tests/cases/compiler/b.js (0 errors) ====
    function foo() {
        return 10;
    }
==== tests/cases/compiler/a.ts (1 errors) ====
    function foo() {
             ~~~
!!! error TS2393: Duplicate function implementation.
        return 30;
    }
    
    